# sxt_reader

./: .gitignore  CMakeLists.txt  README.md
input_examples/: admin.sxt  c_admin.sxt  c_name_overflow.sxt  user.sxt
src/: main.c  sxtFileLoader.c  sxtFileLoader.h  sxtParser.c  sxtParser.h
